:sparkles: add graph query
Add graph query.
