# handler/query/query.go
@@ -2,10 +2,12 @@ package query
 
 import (
 	"fmt"
+	"strconv"
+
 	"github.com/gin-gonic/gin"
 
 	"github.com/NLPMicrobeKG-CCNU/NLPMicrobeKG-backend/handler"
-	"github.com/NLPMicrobeKG-CCNU/NLPMicrobeKG-backend/model"
+	dbQuery "github.com/NLPMicrobeKG-CCNU/NLPMicrobeKG-backend/model/query"
 	"github.com/NLPMicrobeKG-CCNU/NLPMicrobeKG-backend/pkg/errno"
 )
 
@@ -15,20 +17,47 @@ type QueryRequest struct {
 	Offset int    `json:"offset"`
 }
 
-// @Summary 查询数据
+// @Summary 查询数据(表显示)
 // @Tags search
-// @Param data body query.QueryRequest true "查询数据参数"
-// @Success 200 "OK"
+// @param search_type query string true "查询类型 text / data"
+// @Param query query string true "查询数据参数"
+// @Param limit query int true "LIMIT <= 1000"
+// @Param offset query int true "NO RESTRICTIONS"
+// @Success 200 {object} []dbQuery.TextResponse
+// @Success 200 {object} []dbQuery.DataResponse
 // @Router /search [GET]
 func Query(c *gin.Context) {
 	var requestBody QueryRequest
-	if err := c.Bind(&requestBody); err != nil {
-		handler.SendBadRequest(c, errno.ErrBind, nil, err.Error())
+	var err error
+
+	requestBody.Query = c.DefaultQuery("query", "")
+	searchType := c.DefaultQuery("search_type", "text")
+	limitStr := c.DefaultQuery("limit", "1000")
+	offsetStr := c.DefaultQuery("offset", "0")
+
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil {
+		fmt.Println(err)
+		handler.SendError(c, errno.InternalServerError, nil, "query info error")
 		return
 	}
 
-	searchType := c.DefaultQuery("search_type", "text")
+	offset, err := strconv.Atoi(offsetStr)
+	if err != nil {
+		fmt.Println(err)
+		handler.SendError(c, errno.InternalServerError, nil, "query info error")
+		return
+	}
+
+	if limit > 1000 {
+		limit = 1000
+	}
+	requestBody.Limit = limit
+	requestBody.Offset = offset
+
 	var query string
+	var res interface{}
+
 	if searchType == "text" {
 		query = fmt.Sprintf(`PREFIX owl: <http://www.w3.org/2002/07/owl#>
 PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
@@ -36,7 +65,7 @@ prefix pq:<http://nlp_microbe.ccnu.edu.cn/pop/qualifier#>
 prefix ps:<http://nlp_microbe.ccnu.edu.cn/pop/statement#>
 select distinct ?bacname?disname?reference?bac2name?ref2?bac3name?ref3?bac4name?ref4
 where{
-    ?bacid rdfs:label %s.
+    ?bacid rdfs:label "%s".
     graph <http://NLPMicrobeKG.com/bac_dis>{
 		{?bacid pq:hasAssociation ?dis;
          		pq:isAnnotated ?reference.}
@@ -58,6 +87,12 @@ where{
     ?bac3 rdfs:label ?bac3name.
     ?bac4 rdfs:label ?bac4name.
 }`, requestBody.Query)
+		res, err = dbQuery.TextQuery(query, requestBody.Query, requestBody.Limit, requestBody.Offset)
+		if err != nil {
+			fmt.Println(err)
+			handler.SendError(c, errno.InternalServerError, nil, "query info error")
+			return
+		}
 	} else {
 		query = fmt.Sprintf(`PREFIX owl: <http://www.w3.org/2002/07/owl#>
 PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
@@ -65,7 +100,7 @@ prefix pq:<http://nlp_microbe.ccnu.edu.cn/pop/qualifier#>
 prefix ps:<http://nlp_microbe.ccnu.edu.cn/pop/statement#>
 select distinct ?bacname?modulename?compoundname?mount?unit?foodname
 where{
-    {?bacid rdfs:label %s;
+    {?bacid rdfs:label "%s";
            pq:hasPathways ?modules;
            pq:hasMetabolites ?compound.}
     ?modules rdfs:label ?modulename.
@@ -77,10 +112,31 @@ where{
              ps:hasMeasuringUnit ?unit.}
     
 }`, requestBody.Query)
+		res, err = dbQuery.DataQuery(query, requestBody.Query, requestBody.Limit, requestBody.Offset)
+		if err != nil {
+			handler.SendError(c, errno.InternalServerError, nil, "query info error")
+			return
+		}
 	}
 
-	res, err := model.QueryInfo(query, requestBody.Limit, requestBody.Offset)
+	handler.SendResponse(c, nil, handler.Response{
+		Code:    200,
+		Message: "ok",
+		Data:    res,
+	})
+}
+
+// @Summary 查询数据(图数据)
+// @Tags graph
+// @Param search_value query string true "查询数据"
+// @Success 200 {object} dbQuery.Data
+// @Router /graph [GET]
+func GraphQuery(c *gin.Context) {
+	query := c.DefaultQuery("search_value", "")
+
+	res, err := dbQuery.GraphQuery(query)
 	if err != nil {
+		fmt.Println(err)
 		handler.SendError(c, errno.InternalServerError, nil, "query info error")
 		return
 	}
